--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,56 +1,63 @@
 .container{
     gap: 1rem;
-    color: #fff;
     display: flex;
-    height: 100vh;
+    height: 60vh;
     padding: 0rem 2rem;
+    align-items: center;
     flex-direction: column;
+    background-size: cover;
     justify-content: center;
     background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background: url('../images/statue.jpeg');
-
-    .input-container{
-        gap: 1rem;
-        display: flex;
-        padding: 20px;
-        flex-wrap: wrap;
-        background: #fff;
-        border-radius: 1rem;
-        
-        .input-bar{
-            cursor: pointer;
-            border: 1px solid gray;
-            display: flex;
-            border-radius: 1rem;
-            padding: .8rem 1rem;
-            align-items: center;
-            
-            img{
-                width: 25px;
-                height: 25px;
-            }
-            input{
-                border: none;
-                outline: none;
-                width: 100%;
-                font-size: 1.2rem;
-                color: #000;
-                input::placeholder{
-                    color: #3a3a3a;
-                }
-                cursor: pointer;
-            }
-        }
-        
-        .seek-btn{
-            border: none;
+    background-image: url('../images/homePic.jpg');
+    
+    .sub-container{
+        .title{
+            padding-bottom: 1.5rem;
             color: #fff;
-            cursor: pointer;
+        }
+
+        .input-container{
+            gap: 1rem;
+            display: flex;
+            padding: 20px;
+            background: #fcfcfc;
             border-radius: 1rem;
-            padding: .8rem 1.5rem;
-            background: #0000ff;
+            
+            .input-bar{
+                gap: .5rem;
+                display: flex;
+                cursor: pointer;
+                border-radius: 1rem;
+                padding: .8rem 1rem;
+                align-items: center;
+                border: 1px solid gray;
+                background: #fff;
+                img{
+                    width: 25px;
+                    height: 25px;
+                }
+                input{
+                    background: none;
+                    border: none;
+                    outline: none;
+                    width: 100%;
+                    font-size: 1.2rem;
+                    color: #000;
+                    input::placeholder{
+                        color: #3a3a3a;
+                    }
+                    cursor: pointer;
+                }
+            }
+            
+            .seek-btn{
+                border: none;
+                color: #fff;
+                cursor: pointer;
+                border-radius: 1rem;
+                padding: .8rem 1.5rem;
+                background: #0000ff;
+            }
         }
     }
 }
