--- a/src/styles/firstCards.css
+++ b/src/styles/firstCards.css
@@ -40,8 +40,9 @@
 
 .second-card-container{
     gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     padding: 1.5rem 0rem;
-    display: flex;
 
     .second-card{
         display: grid;
@@ -52,10 +53,12 @@
         grid-template-columns: 1fr 1fr;
 
         .second-card-content{
+            width: 100%;
+            height: 100%;
             color: #fff;
             font-weight: 500;
-            padding: 3rem 1rem;
-            background-color: #0a0063;
+            padding: 1.1rem 1rem;
+            background-color: #307cee;
 
             button{
                 gap: .5rem;
@@ -81,12 +84,13 @@
 
 .images-container{
     gap: 1rem;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
 
     .image-card{
-        width: 100%;
+        aspect-ratio: 6/8;
+        cursor: pointer;
         color: #fff;
-        height: 320px;
         display: flex;
         overflow: hidden;
         padding: 1rem;
